fixed NQ visibility issues, added animations for styling purposes

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ button{
     border-radius: 99px;
     background-color: #ADF7B6;
     transition: all 300ms ease;
-    
 }
 
 #btn {
@@ -132,7 +131,55 @@ a:hover {
         flex-direction: row;
     }
 
-    
+    @keyframes reappear {
+        0%{
+            opacity: 0;
+            transform: translateY(50px);
+        }
+        10%{
+            opacity: 0.1;
+            transform: translateY(45px);
+        }
+        20%{
+            opacity: 0.2;
+            transform: translateY(40px);
+        }
+        30%{
+            opacity: 0.3;
+            transform: translateY(35px);
+        }
+        40%{
+            opacity: 0.4;
+            transform: translateY(30px);
+        }
+        50%{
+            opacity: 0.5;
+            transform: translateY(25px);
+        }
+        60%{
+            opacity: 0.6;
+            transform: translateY(20px);
+        }
+        70%{
+            opacity: 0.7;
+            transform: translateY(15px);
+        }
+        80%{
+            opacity: 0.8;
+            transform: translateY(10px);
+        }
+        90%{
+            opacity: 0.9;
+            transform: translateY(5px);
+        }
+        100%{
+            opacity: 1;
+            transform: translateY(0px);
+        }
+    }
+
+
+
     @keyframes wrong {
         0% {
           transform: translateX(0px);
